<resources>
    <string name="app_name">DTE-2603-Prosjekt</string>
    <string name="enter_email">E-post</string>
    <string name="enter_password">Passord</string>
    <string name="login_button_text">Logg inn</string>
    <string name="forgot_password_textview">Glemt passord?</string>
    <string name="register_textview">Registrer</string>
    <string name="email_textview">E-post</string>
    <string name="password_textview">Passord</string>
    <string name="register_user_button">Registrer deg</string>
    <string name="reset_password">Tilbakestill passord</string>
    <string name="cancel">Avbryt</string>
    <string name="reset">Tilbakestill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>